# WAFisGoingOn

./: Dockerfile  Dockerfile.target  README.md  app.py  config.yaml  data.txt  docker-compose.yml  main.py  playground.py  pyproject.toml  requirements.txt  social_media_calendar_30day.docx
target_app/: app.py
waf/: classifier.py  config.py  detector.py  report.py
